--- a/mmbase/trunk/contributions/didactor2/src/education/java/nl/didactor/component/education/EducationMessageBundle.properties
+++ b/mmbase/trunk/contributions/didactor2/src/education/java/nl/didactor/component/education/EducationMessageBundle.properties
@@ -1,3 +1,5 @@
+abbreviationRWD=cre&euml;ren, lezen, schrijven en verwijderen
+abbreviationRW=cre&euml;ren, lezen en schrijven
 addchatlog=Chatverslag plaatsen
 addchatlogpersonal=Toevoegen chatverslag aan persoonlijke werkruimte
 addchatlogpublic=Toevoegen chatverslag aan publieke werkruimte
@@ -12,6 +14,7 @@ addworkgroupagendaitem=Werkgroep afspraak plaatsen
 administrator=beheerder
 administrators=beheerders
 agendaitemappointment=Agenda afspraak
+areYouSureDelRole=Weet u zeker dat u deze rol wilt verwijderen?
 appointment=Afspraak
 attachments=bijlage(s)
 back=terug
@@ -61,8 +64,7 @@ createNewPage=Maak een nieuwe pagina aan
 createNewPageDescription=Nieuwe pagina aanmaken
 createNewRankingquestions=Maak een rangorde vraag aan
 createNewRankingquestionsDescription=Nieuwe rangorde vraag aanmaken
-createNewRoles=Nieuwe rol toevoegen
-createNewRolesDescription=Voeg een nieuwe rol toe aan de opleiding
+createNewRole=Cre&euml;r een nieuwe rol
 createNewTest=Maak een nieuwe test aan
 createNewTestDescription=Nieuwe test aanmaken
 createNewValuequestions=Maak een waarde vraag aan
@@ -77,6 +79,7 @@ deleteno=nee
 deleteselected=Verwijder geselecteerde
 deleteselectedcontactsyesno=Wilt u de geselecteerde contactpersonen echt verwijderen?
 deletethisfolderyesno=Wilt u deze map inclusief de inhoud echt verwijderen?
+deleteThisRole=verwijder deze rol
 deleteyes=ja
 description=Beschrijving
 editComponents=Componenten beheer
@@ -87,7 +90,7 @@ editoronline=Editor online
 editPeopleRoleRelEducation=Toevoegen/bewerken rollen
 editPeopleRoleRelEducationDescription=Bewerken rollen
 educationMenuComponents=Componenten
-educationMenuRoles=Rollen
+educationMenuAuthorization=Authorisatie
 educationMenuCompetence=Competentie
 educationMenuMetadata=Metadata
 educationMenuContentMetadata=Contentelementen
@@ -149,7 +152,10 @@ remove_thread=verwijder alle
 remove=verwijder
 rename=hernoemen
 renamefolder=Hernoemen map
+reset=reset
 roles=Rollen Beheer
+rolesShort=rollen
+save=opslaan
 selectoneitem=Selecteer minimaal een item door het aan te vinken.
 send=verstuur
 shareddocuments=Gedeelde documenten
@@ -189,6 +195,7 @@ urldescription=Beschrijving
 urllink=Link
 urlname=Naam
 useThese=gebruik deze
+users=gebruikers
 workgroup=Werkgroep
 writemessage=schrijf bericht
 writenewemail=Nieuwe e-mail schrijven
