--- a/mmbase/trunk/src/org/mmbase/bridge/implementation/datatypes/resources/datatypes.properties
+++ b/mmbase/trunk/src/org/mmbase/bridge/implementation/datatypes/resources/datatypes.properties
@@ -1,32 +1,43 @@
+binary.required.error=A value is required.
 binary.minLength.error=The value must be ${PROPERTY} or more bytes long.
 binary.maxLength.error=The value must be no more than ${PROPERTY} bytes long.
+boolean.required.error=A value is required.
+datetime.required.error=A value is required.
 datetime.minInclusive.error=The value ${VALUE} may not be earlier than the minimum value ${PROPERTY}
 datetime.minExclusive.error=The value ${VALUE} may not be earlier than or equal to the minimum value ${PROPERTY}
 datetime.maxInclusive.error=The value ${VALUE} may not be later than the minimum value ${PROPERTY}
 datetime.maxExclusive.error=The value ${VALUE} may not be later than or equal to the minimum value ${PROPERTY}
+double.required.error=A value is required.
 double.minInclusive.error=The value ${VALUE} may not be less than the minimum value ${PROPERTY}
 double.minExclusive.error=The value ${VALUE} may not be less than or equal to the minimum value ${PROPERTY}
 double.maxInclusive.error=The value ${VALUE} may not be more than the minimum value ${PROPERTY}
 double.maxExclusive.error=The value ${VALUE} may not be more than or equal to the minimum value ${PROPERTY}
+float.required.error=A value is required.
 float.minInclusive.error=The value ${VALUE} may not be less than the minimum value ${PROPERTY}
 float.minExclusive.error=The value ${VALUE} may not be less than or equal to the minimum value ${PROPERTY}
 float.maxInclusive.error=The value ${VALUE} may not be more than the minimum value ${PROPERTY}
 float.maxExclusive.error=The value ${VALUE} may not be more than or equal to the minimum value ${PROPERTY}
+integer.required.error=A value is required.
 integer.minInclusive.error=The value ${VALUE} may not be less than the minimum value ${PROPERTY}
 integer.minExclusive.error=The value ${VALUE} may not be less than or equal to the minimum value ${PROPERTY}
 integer.maxInclusive.error=The value ${VALUE} may not be more than the minimum value ${PROPERTY}
 integer.maxExclusive.error=The value ${VALUE} may not be more than or equal to the minimum value ${PROPERTY}
+list.required.error=A value is required.
 list.minSize.error=The list must contain at least ${PROPERTY} items.
 list.maxSize.error=The list cannot contain more than ${PROPERTY} items.
 list.itemDataType.error=The value is not of the proper type for this list.
+long.required.error=A value is required.
 long.minInclusive.error=The value ${VALUE} may not be less than the minimum value ${PROPERTY}
 long.minExclusive.error=The value ${VALUE} may not be less than or equal to the minimum value ${PROPERTY}
 long.maxInclusive.error=The value ${VALUE} may not be more than the minimum value ${PROPERTY}
 long.maxExclusive.error=The value ${VALUE} may not be more than or equal to the minimum value ${PROPERTY}
+node.required.error=A value is required.
 node.mustexist.error=The node referenced by ${VALUE} does not exist.
+string.required.error=A value is required.
 string.minLength.error=The value must be ${PROPERTY} or more characters long.
 string.maxLength.error=The value must be no more than ${PROPERTY} characters long.
 string.pattern.error=The value must match the pattern '${PROPERTY}'.
+xml.required.error=A value is required.
 xml.minLength.error=The document must be ${PROPERTY} or more bytes long.
 xml.maxLength.error=The document must be no more than ${PROPERTY} bytes long.
 
