--- a/mmbase/trunk/contributions/didactor2/src/education/java/nl/didactor/component/education/EducationMessageBundle.properties
+++ b/mmbase/trunk/contributions/didactor2/src/education/java/nl/didactor/component/education/EducationMessageBundle.properties
@@ -31,6 +31,7 @@ chatlogtitlelowercase=chatverslag
 chatmenuitem=chat
 city=Plaats
 class=Klas
+classes=Klassen
 closeforum=sluit forum voor studenten
 competence=Competentie beheer
 contact=Contactpersoon
@@ -90,12 +91,11 @@ editoronline=Editor online
 editPeopleRoleRelEducation=Toevoegen/bewerken rollen
 editPeopleRoleRelEducationDescription=Bewerken rollen
 educationMenuComponents=Componenten
-educationMenuAuthorization=Authorisatie
+educationMenuPersons=Personen
 educationMenuCompetence=Competentie
 educationMenuMetadata=Metadata
 educationMenuContentMetadata=Contentelementen
 educationMenuFilemanagement=Filemanagement
-educationMenuWorkgroups=Werkgroepen
 educationMenuTests=Toetsen
 educationMenuEducations=Opleidingen
 EDUCATION=Opleiding
@@ -104,6 +104,14 @@ email=Email
 emailtitle=E-mail
 endtime=Eind
 filemanagement=Filemanagement
+filemanagementTableName=Naam
+filemanagementTableType=Type
+filemanagementTableSize=Grootte
+filemanagementTableFileExt=Bestandsextensie
+filemanagementDeletePrompt=Weet u zeker dat u dit bestand wilt verwijderen?
+FTPfiles=FTP-BESTANDEN({$$$} ITEMS)
+ftpUpload=Ftp functie
+fileUploadOk=Upload OK
 filename=Bestand
 filesto=bestand(en) naar:
 filesto=bestand(en) naar:
@@ -146,6 +154,8 @@ open=openen
 openforum=open forum voor studenten
 openitem=Open item
 post=plaats
+persons=Personen
+personsTab=Personen beheer
 print=print
 printagenda=afdrukken
 remove_thread=verwijder alle
@@ -153,9 +163,9 @@ remove=verwijder
 rename=hernoemen
 renamefolder=Hernoemen map
 reset=reset
-roles=Rollen Beheer
-rolesShort=rollen
+roles=Rollen
 save=opslaan
+SCORMimport=SCORM-import
 selectoneitem=Selecteer minimaal een item door het aan te vinken.
 send=verstuur
 shareddocuments=Gedeelde documenten
@@ -201,4 +211,3 @@ writemessage=schrijf bericht
 writenewemail=Nieuwe e-mail schrijven
 zipcode=Postcode
 workgroups=Werkgroepen
-
