--- a/mmbase/trunk/applications/build.xml
+++ b/mmbase/trunk/applications/build.xml
@@ -49,8 +49,7 @@ Applications build file
 
   <target name="mmbase" depends="init">
     <ant dir="${source.dir}" target="jar" inheritAll="false">
-      <property name="destination.dir"        value="${destination.dir}" />
-      <property name="build.documentation"        value="${build.documentation}" />
+      <property name="build.dir"        value="${build.dir}" />
     </ant>
   </target>
 
