--- a/applications/build.xml
+++ b/applications/build.xml
@@ -50,6 +50,7 @@ Applications build file
   <target name="mmbase" depends="init">
     <ant dir="${source.dir}" target="jar" inheritAll="false">
       <property name="build.dir"        value="${build.dir}" />
+      <property name="download.dir"        value="${download.dir}" />
     </ant>
   </target>
 
@@ -88,6 +89,7 @@ Applications build file
      <ant dir="rmmci" target="package" inheritAll="false">
        <property name="project.zip.dir"        value="${applications.build.dir}" />
        <property name="build.dir"        value="${build.dir}" />
+       <property name="download.dir"        value="${download.dir}" />
      </ant>
   </target>
 
