--- a/mmbase/trunk/applications/build.xml
+++ b/mmbase/trunk/applications/build.xml
@@ -57,18 +57,24 @@ Applications build file
   <target name="media" depends="mmbase,editwizard">
      <ant dir="media"      target="package" inheritAll="false">
        <property name="project.zip.dir"        value="${applications.build.dir}" />
+       <property name="build.dir"        value="${build.dir}" />
+       <property name="download.dir"        value="${download.dir}" />
      </ant>
   </target>
 
   <target name="scan" depends="mmbase">
      <ant dir="scan"      target="dependent.package" inheritAll="false">
        <property name="project.zip.dir"        value="${applications.build.dir}" />
+       <property name="build.dir"        value="${build.dir}" />
+       <property name="download.dir"        value="${download.dir}" />
      </ant>
   </target>
 
   <target name="vwms" depends="mmbase">
      <ant dir="vwms"      target="package" inheritAll="false">
        <property name="project.zip.dir"        value="${applications.build.dir}" />
+       <property name="build.dir"        value="${build.dir}" />
+       <property name="download.dir"        value="${download.dir}" />
      </ant>
   </target>
 
@@ -76,12 +82,16 @@ Applications build file
   <target name="bugtracker" depends="init">
      <ant dir="bugtracker"      target="package" inheritAll="false">
        <property name="project.zip.dir"        value="${applications.build.dir}" />
+       <property name="build.dir"        value="${build.dir}" />
+       <property name="download.dir"        value="${download.dir}" />
      </ant>
   </target>
 
   <target name="email" depends="mmbase">
      <ant dir="email"      target="package" inheritAll="false">
        <property name="project.zip.dir"        value="${applications.build.dir}" />
+       <property name="build.dir"        value="${build.dir}" />
+       <property name="download.dir"        value="${download.dir}" />
      </ant>
   </target>
 
@@ -96,6 +106,8 @@ Applications build file
   <target name="editwizard" depends="dove,mmbase">
      <ant dir="editwizard" target="dependent.package" inheritAll="false">
        <property name="project.zip.dir"        value="${applications.build.dir}" />
+       <property name="build.dir"        value="${build.dir}" />
+       <property name="download.dir"        value="${download.dir}" />
      </ant>
   </target>
 
@@ -103,54 +115,72 @@ Applications build file
   <target name="dove" depends="mmbase">
      <ant dir="dove" target="package" inheritAll="false">
        <property name="project.zip.dir"        value="${applications.build.dir}" />
+       <property name="build.dir"        value="${build.dir}" />
+       <property name="download.dir"        value="${download.dir}" />
      </ant>
   </target>
 
   <target name="cloudcontext" depends="mmbase">
      <ant dir="cloudcontext"  target="package" inheritAll="false">
        <property name="project.zip.dir"        value="${applications.build.dir}" />
+       <property name="build.dir"        value="${build.dir}" />
+       <property name="download.dir"        value="${download.dir}" />
      </ant>
   </target>
 
   <target name="community" depends="mmbase,taglib">
      <ant dir="community"  target="dependent.package" inheritAll="false">
        <property name="project.zip.dir"        value="${applications.build.dir}" />
+       <property name="build.dir"        value="${build.dir}" />
+       <property name="download.dir"        value="${download.dir}" />
      </ant>
   </target>
 
   <target name="taglib" depends="mmbase">
      <ant dir="taglib"  target="dependent.package" inheritAll="false">
        <property name="project.zip.dir"        value="${applications.build.dir}" />
+       <property name="build.dir"        value="${build.dir}" />
+       <property name="download.dir"        value="${download.dir}" />
      </ant>
   </target>
 
   <target name="xmlimporter" depends="mmbase">
      <ant dir="xmlimporter"  target="dependent.package" inheritAll="false">
        <property name="project.zip.dir"        value="${applications.build.dir}" />
+       <property name="build.dir"        value="${build.dir}" />
+       <property name="download.dir"        value="${download.dir}" />
      </ant>
   </target>
 
   <target name="crontab" depends="mmbase">
      <ant dir="crontab"  target="package" inheritAll="false">
        <property name="project.zip.dir"        value="${applications.build.dir}" />
+       <property name="build.dir"        value="${build.dir}" />
+       <property name="download.dir"        value="${download.dir}" />
      </ant>
   </target>
 
   <target name="packaging" depends="mmbase">
      <ant dir="packaging"  target="package" inheritAll="false">
        <property name="project.zip.dir"        value="${applications.build.dir}" />
+       <property name="build.dir"        value="${build.dir}" />
+       <property name="download.dir"        value="${download.dir}" />
      </ant>
   </target>
 
   <target name="clustering" depends="mmbase">
      <ant dir="clustering"  target="dependent.package" inheritAll="false">
        <property name="project.zip.dir"        value="${applications.build.dir}" />
+       <property name="build.dir"        value="${build.dir}" />
+       <property name="download.dir"        value="${download.dir}" />
      </ant>
   </target>
 
   <target name="richtext" depends="mmbase">
      <ant dir="richtext"  target="package" inheritAll="false">
        <property name="project.zip.dir"        value="${applications.build.dir}" />
+       <property name="build.dir"        value="${build.dir}" />
+       <property name="download.dir"        value="${download.dir}" />
      </ant>
   </target>
 
