--- a/applications/build.xml
+++ b/applications/build.xml
@@ -12,7 +12,7 @@ Applications build file
   <property file="build.properties"/>
   <!-- Default values for properties that can be customized -->
 
-  <property name="source.dir"   location=".." />
+  <property name="source.dir"   location="../" />
   <property name="share.dir"    location="./share" />
 
   <property file="${source.dir}/build.properties" />
@@ -47,12 +47,17 @@ Applications build file
   </target>
 
   <target name="mmbase" depends="init">
-    <ant dir="${source.dir}" target="jar" inheritAll="false" />
+    <ant dir="${source.dir}" target="jar" inheritAll="false">
+      <property name="build.dir"        value="${build.dir}" />
+      <property name="download.dir"     value="${download.dir}" />
+    </ant>
   </target>
 
   <target name="media" depends="mmbase,editwizard">
      <ant dir="media"      target="package" inheritAll="false">
        <property name="project.zip.dir"        value="${applications.build.dir}" />
+       <property name="build.dir"        value="${build.dir}" />
+       <property name="download.dir"     value="${download.dir}" />
      </ant>
   </target>
 
@@ -60,6 +65,8 @@ Applications build file
   <target name="scan" depends="mmbase">
      <ant dir="scan"      target="package" inheritAll="false">
        <property name="project.zip.dir"        value="${applications.build.dir}" />
+       <property name="build.dir"        value="${build.dir}" />
+       <property name="download.dir"     value="${download.dir}" />
      </ant>
   </target>
 
@@ -67,24 +74,32 @@ Applications build file
   <target name="bugtracker" depends="init">
      <ant dir="bugtracker"      target="package" inheritAll="false">
        <property name="project.zip.dir"        value="${applications.build.dir}" />
+       <property name="build.dir"        value="${build.dir}" />
+       <property name="download.dir"     value="${download.dir}" />
      </ant>
   </target>
 
   <target name="email" depends="mmbase">
      <ant dir="email"      target="package" inheritAll="false">
        <property name="project.zip.dir"        value="${applications.build.dir}" />
+       <property name="build.dir"        value="${build.dir}" />
+       <property name="download.dir"     value="${download.dir}" />
      </ant>
   </target>
 
   <target name="rmmci" depends="mmbase">
      <ant dir="rmmci" target="package" inheritAll="false">
        <property name="project.zip.dir"        value="${applications.build.dir}" />
+       <property name="build.dir"        value="${build.dir}" />
+       <property name="download.dir"     value="${download.dir}" />
      </ant>
   </target>
 
   <target name="editwizard" depends="dove,mmbase">
      <ant dir="editwizard" target="dependent.package" inheritAll="false">
        <property name="project.zip.dir"        value="${applications.build.dir}" />
+       <property name="build.dir"        value="${build.dir}" />
+       <property name="download.dir"     value="${download.dir}" />
      </ant>
   </target>
 
@@ -92,30 +107,40 @@ Applications build file
   <target name="dove" depends="mmbase">
      <ant dir="dove" target="package" inheritAll="false">
        <property name="project.zip.dir"        value="${applications.build.dir}" />
+       <property name="build.dir"        value="${build.dir}" />
+       <property name="download.dir"     value="${download.dir}" />
      </ant>
   </target>
 
   <target name="cloudcontext" depends="mmbase">
      <ant dir="cloudcontext"  target="package" inheritAll="false">
        <property name="project.zip.dir"        value="${applications.build.dir}" />
+       <property name="build.dir"        value="${build.dir}" />
+       <property name="download.dir"     value="${download.dir}" />
      </ant>
   </target>
 
   <target name="community" depends="mmbase,taglib">
      <ant dir="community"  target="dependent.package" inheritAll="false">
        <property name="project.zip.dir"        value="${applications.build.dir}" />
+       <property name="build.dir"        value="${build.dir}" />
+       <property name="download.dir"     value="${download.dir}" />
      </ant>
   </target>
 
   <target name="taglib" depends="mmbase">
      <ant dir="taglib"  target="dependent.package" inheritAll="false">
        <property name="project.zip.dir"        value="${applications.build.dir}" />
+       <property name="build.dir"        value="${build.dir}" />
+       <property name="download.dir"     value="${download.dir}" />
      </ant>
   </target>
 
   <target name="xmlimporter" depends="mmbase">
      <ant dir="xmlimporter"  target="package" inheritAll="false">
        <property name="project.zip.dir"        value="${applications.build.dir}" />
+       <property name="build.dir"        value="${build.dir}" />
+       <property name="download.dir"     value="${download.dir}" />
      </ant>
   </target>
 
